--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mohammedalikhal\\sqlexpress;Database=pizza_db;Trusted_Connection=True;"
+
+
+  }
+    
+   
 }
